Sun Jan  2 15:26:55 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* bsetrack.c: Use different playback networks for GUS Patches and
	normal waves, depending on play-type xinfo string.

	* bsewave.h: Add xinfos field (needs implementation).

	* gslloader-pat.cc: Set play-type to "gus-patch-mono".

Sun Jan  2 15:23:35 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* zintern/Makefile.am:
	* zintern/zintern.c: Use Scheme identifier style for zintern names.

	* zintern/gus-patch-mono.bse: Add a network for GUS Patch playback.

Sun Jan  2 11:41:05 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* gslloader-pat.cc: GUS Patches are only mono patches.

Sat Jan  1 21:59:43 2005  Tim Janik  <timj@gtk.org>

	* bseutils.[hc] bse_xinfos_dup_consolidated(): added flag to indicate 
	whether internal xinfos should be copied.

	* gsldatahandle-mad.c:
	* gsldatahandle-vorbis.c:
	* gsldatahandle.[hc]:
	* gslloader-bsewave.c:
	moved bit_depth, mix_freq and needs_cache (back) into the 
	GslDataHandleSetup structure, because they are an integral part of
	all wave data storage formats. turned osc-freq into a custom xinfo
	string, because it is not.

Sat Jan  1 21:20:03 2005  Tim Janik  <timj@gtk.org>

	* zintern/wave-mono.bse: CVS copied from mono-wave.bse.

Fri Dec 31 16:39:21 2004  Tim Janik  <timj@gtk.org>

	* gsldatahandle.[hc]: removed bit_depth, osc_freq and mix_freq from
	GslDataHandleSetup, removed gsl_data_handle_override(). these
	values are accessible throuzgh accessors and stored in xinfos now.

	* gslloader-bsewave.c: provide osc-freq via xinfo.

	* gsldatahandle-vorbis.c:
	* gsldatahandle-mad.c: set bit-depth, osc-freq and mix-freq via xinfos.

Fri Dec 31 13:44:16 2004  Tim Janik  <timj@gtk.org>

	* gsldatahandle.c:
	(gsl_wave_handle_new_zoffset): 
	(gsl_wave_handle_new): provide dhandle xinfos without creating
	an extra data handle.

Fri Dec 31 13:32:47 2004  Tim Janik  <timj@gtk.org>

	* bseutils.c (bse_xinfos_dup_consolidated): duplicate xinfo array and